--- a/gb/16/8/2/n8159100.md
+++ b/gb/16/8/2/n8159100.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/dahstt3965/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dahstt3965/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/dahstt3965/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dahstt3965/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/dahstt3965/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dahstt3965/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/dahstt3965/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dahstt3965/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/dahstt3965/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dahstt3965/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/dahstt3965/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dahstt3965/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/dahstt3965/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dahstt3965/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/dahstt3965/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dahstt3965/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/dahstt3965/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/dahstt3965/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/dahstt3965/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/dahstt3965/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/dahstt3965/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/dahstt3965/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/dahstt3965/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/dahstt3965/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/dahstt3965/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/dahstt3965/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/dahstt3965/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/dahstt3965/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/dahstt3965/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/dahstt3965/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/dahstt3965/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/dahstt3965/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/dahstt3965/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/dahstt3965/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/dahstt3965/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/dahstt3965/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/dahstt3965/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/dahstt3965/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/dahstt3965/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/dahstt3965/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/dahstt3965/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/dahstt3965/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/dahstt3965/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/dahstt3965/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/dahstt3965/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/dahstt3965/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/dahstt3965/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xsumwp3307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>为避新税 加拿大大温地产业日夜加班</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2016年08月02日讯】（大纪元记者周行多伦多综合报导）为了避开15%的新<ahref="https://github.com/dahstt3965/djy/blob/master/gb/tag/%E5%9C%9F%E5%9C%B0%E8%BD%AC%E8%AE%A9%E7%A8%8E.md#1">土地转让税</a>，温哥华临时居民张女士想尽办法把房子的卖家从中国请回温哥华，希望在8月2日新税生效前完成交易。</p>
-<p>在温哥华地区购房的外国人，从8月2日开始，须要多交15%的<ahref="https://github.com/dahstt3965/djy/blob/master/gb/tag/%E5%9C%9F%E5%9C%B0%E8%BD%AC%E8%AE%A9%E7%A8%8E.md#1">土地转让税</a>。对于张女士（Shinna Zhang）来说，不能提前完成交易的话，不止是要多交税的问题，很可能因为买不起而损失定金，违反合约还可能被卖家起诉。</p>
+<p>【大纪元2016年08月02日讯】（大纪元记者周行多伦多综合报导）为了避开15%的新<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%9C%9F%E5%9C%B0%E8%BD%AC%E8%AE%A9%E7%A8%8E.md#1">土地转让税</a>，温哥华临时居民张女士想尽办法把房子的卖家从中国请回温哥华，希望在8月2日新税生效前完成交易。</p>
+<p>在温哥华地区购房的外国人，从8月2日开始，须要多交15%的<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%9C%9F%E5%9C%B0%E8%BD%AC%E8%AE%A9%E7%A8%8E.md#1">土地转让税</a>。对于张女士（Shinna Zhang）来说，不能提前完成交易的话，不止是要多交税的问题，很可能因为买不起而损失定金，违反合约还可能被卖家起诉。</p>
 <p>据《温哥华太阳报》报导，张女士和丈夫是来自英国的外劳，张女士怀孕后，他们决定买房子。这是一栋85万的镇屋，原来的合约规定今年11月1日完成交易，他们交了4万元定金。突然冒出的15%新税意味着成本增加约13万，他们没有这笔钱。</p>
 <p>情急之下，张女士和丈夫试图把正在中国的卖家请回来，争取在新税生效前完成交易，他们的地产经纪朱先生也提供帮助。终于，卖家在周五乘飞机回到温哥华。</p>
 <p>朱先生对《温哥华太阳报》说，他们花了2天时间，去说服卖家改变交房日期。原来的律师因为觉得太麻烦已经退出了，他们找了超过20名律师，才找到愿意在这么短时间内帮助修改合同的人。</p>
-<p>卑诗省政府上周一宣布这项新税，在一周后实施，中间还有一个长周末。大<ahref="https://github.com/dahstt3965/djy/blob/master/gb/tag/%E6%B8%A9%E5%93%A5%E5%8D%8E%E5%9C%B0%E4%BA%A7.md#1">温哥华地产</a>局呼吁政府对正在进行中的地产交易豁免此税，但政府没让步。</p>
-<p><strong><ahref="https://github.com/dahstt3965/djy/blob/master/gb/tag/%E6%B8%A9%E5%93%A5%E5%8D%8E%E5%9C%B0%E4%BA%A7.md#1">温哥华地产</a>行业日夜加班</strong></p>
+<p>卑诗省政府上周一宣布这项新税，在一周后实施，中间还有一个长周末。大<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E6%B8%A9%E5%93%A5%E5%8D%8E%E5%9C%B0%E4%BA%A7.md#1">温哥华地产</a>局呼吁政府对正在进行中的地产交易豁免此税，但政府没让步。</p>
+<p><strong><ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E6%B8%A9%E5%93%A5%E5%8D%8E%E5%9C%B0%E4%BA%A7.md#1">温哥华地产</a>行业日夜加班</strong></p>
 <p>为避开这15%的税，当地的地产经纪、律师和公证人都在加班工作，以赶在8月1日前完成有关的物业交易。</p>
 <p>大温地产局总裁莫里森（Dan Morrison）称，数以百计的卑诗省民在长周末加班，面对压力和不确定因素，去应对他们一生中最大的金融交易。因为如果等到周二的话，就要多交15%的税。</p>
 <p>大温地区的独立屋基准价，上个月已升至150万，15%就是22.5万元。</p>
@@ -27,47 +27,46 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/dahstt3965/djy/blob/master/gb/12/12/6/n3746382.md#1">多伦多房屋成交下跌16% 公寓是重灾区</a></li>
-<li><a href="https://github.com/dahstt3965/djy/blob/master/gb/16/2/5/n4633862.md#1">互随CEO：住房难负担 温哥华将变经济鬼城</a></li>
-<li><a href="https://github.com/dahstt3965/djy/blob/master/gb/16/2/10/n4637344.md#1">温哥华经纪炒房严重 省府启动独立调查</a></li>
-<li><a href="https://github.com/dahstt3965/djy/blob/master/gb/16/3/18/n4665247.md#1">加拿大房主称 买房面积被经纪忽悠</a></li>
-<li><a href="https://github.com/dahstt3965/djy/blob/master/gb/16/5/25/n7930236.md#1">海外买家增多  涉借加拿大房市洗钱</a></li>
-<li><a href="https://github.com/dahstt3965/djy/blob/master/gb/16/5/26/n7935189.md#1">“巴拿马文件”挖掘温哥华富人的秘密</a></li>
-<li><a href="https://github.com/dahstt3965/djy/blob/master/gb/16/7/7/n8076908.md#1">加拿大房市热 如何控制仍是谜</a></li>
-<li><a href="https://github.com/dahstt3965/djy/blob/master/gb/16/7/27/n8142615.md#1">卑诗省征外国购房者重税 引加拿大各界关注</a></li>
-<li><a href="https://github.com/dahstt3965/djy/blob/master/gb/16/7/29/n8147496.md#1">温哥华房市15%新税未开征 地产经纪支招避税被查</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/12/12/6/n3746382.md#1">多伦多房屋成交下跌16% 公寓是重灾区</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/2/5/n4633862.md#1">互随CEO：住房难负担 温哥华将变经济鬼城</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/2/10/n4637344.md#1">温哥华经纪炒房严重 省府启动独立调查</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/3/18/n4665247.md#1">加拿大房主称 买房面积被经纪忽悠</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/5/25/n7930236.md#1">海外买家增多  涉借加拿大房市洗钱</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/5/26/n7935189.md#1">“巴拿马文件”挖掘温哥华富人的秘密</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/7/7/n8076908.md#1">加拿大房市热 如何控制仍是谜</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/7/27/n8142615.md#1">卑诗省征外国购房者重税 引加拿大各界关注</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/7/29/n8147496.md#1">温哥华房市15%新税未开征 地产经纪支招避税被查</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/7/n10283458.md#1" target="_blank">李庆霖“知青英雄”悲剧是如何造成的(上)</a></li><li><a href="https://github.com/dahstt3965/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/9/22/n3688691.md#1" target="_blank">不再对强盗说“谢谢”</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/28/n11616929.md#1" target="_blank">颜智华：中国特大饥荒60周年祭（三）</a></li><li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/5/13/n7891043.md#1" target="_blank">永恒的感恩</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/dahstt3965/djy/blob/master/gb/20/12/30/n12654008.md#1">2021年的六大预言：灾难与救赎</a></li>
-<li><a href="https://github.com/dahstt3965/djy/blob/master/gb/21/1/1/n12659278.md#1">川普签法案 国防部180天内须揭露UFO讯息</a></li>
-<li><a href="https://github.com/dahstt3965/djy/blob/master/gb/21/1/4/n12665017.md#1">蓝色UFO出现在夏威夷夜空 随后俯冲入海</a></li>
-<li><a href="https://github.com/dahstt3965/djy/blob/master/gb/21/1/3/n12663595.md#1">屡遭YouTube删片 印度爆红占星师开设网站</a></li>
-<li><a href="https://github.com/dahstt3965/djy/blob/master/gb/20/12/30/n12655241.md#1">你今世的亲人必与你结过前缘</a></li>
-<li><a href="https://github.com/dahstt3965/djy/blob/master/gb/21/1/5/n12668709.md#1">【唐青看时事】新华社管全球 中共颠覆美新闻界</a></li>
-<li><a href="https://github.com/dahstt3965/djy/blob/master/gb/21/1/6/n12669343.md#1">【唐青看时事】国会认证拜登？三剑客能否阻止</a></li>
-<li><a href="https://github.com/dahstt3965/djy/blob/master/gb/21/1/5/n12668655.md#1">【财商天下】中美欧“新三国演义” ？中欧协定各怀心思</a></li>
-<li><a href="https://github.com/dahstt3965/djy/blob/master/gb/21/1/4/n12666220.md#1">【独家】川普在宾州的43.2万选票被删除</a></li>
-<li><a href="https://github.com/dahstt3965/djy/blob/master/gb/21/1/4/n12666762.md#1">“‘李娜’退出中国国籍”上微博热搜</a></li>
-<li><a href="https://github.com/dahstt3965/djy/blob/master/gb/21/1/4/n12666258.md#1">传美方已掌控证人 美国安高官：实验室泄病毒</a></li>
-<li><a href="https://github.com/dahstt3965/djy/blob/master/gb/21/1/4/n12664632.md#1">赵丽颖发文宣传新剧 意外暴露用“古董”手机</a></li>
-<li><a href="https://github.com/dahstt3965/djy/blob/master/gb/21/1/4/n12666681.md#1">林青霞贺年图片藏玄机？网络疯传其豪门婚变</a></li>
-<li><a href="https://github.com/dahstt3965/djy/blob/master/gb/21/1/3/n12664153.md#1">玄彬和孙艺真恋情公开 江疏影的反应笑翻网络</a></li>
-<li><a href="https://github.com/dahstt3965/djy/blob/master/gb/21/1/4/n12666446.md#1">遛狗返家倒地不起 007邦女郎坦娅·罗伯茨骤逝</a></li>
-<li><a href="https://github.com/dahstt3965/djy/blob/master/gb/21/1/5/n12667940.md#1">畅谈生活 黄秋生人在台湾：没发现我很开心吗</a></li>
-<li><a href="https://github.com/dahstt3965/djy/blob/master/gb/21/1/4/n12665282.md#1">马铃薯是减肥者的好淀粉 这样保存不怕发芽</a></li>
-<li><a href="https://github.com/dahstt3965/djy/blob/master/gb/21/1/4/n12665017.md#1">蓝色UFO出现在夏威夷夜空 随后俯冲入海</a></li>
-<li><a href="https://github.com/dahstt3965/djy/blob/master/gb/21/1/4/n12665269.md#1">印度警察救起铁轨上的老人 再赏他耳光</a></li>
-<li><a href="https://github.com/dahstt3965/djy/blob/master/gb/21/1/4/n12665511.md#1">美死刑犯打18剂毒针没死 最终死于中共病毒</a></li>
-<li><a href="https://github.com/dahstt3965/djy/blob/master/gb/21/1/4/n12666327.md#1">小寒是最冷的节气！男女各有1个部位要保暖</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740262.md#1">【秦鹏直播】不让戴口罩 李克强和习杠上了？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740815.md#1">【微视频】粮价涨多少？美国争论中国关税</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740248.md#1">【远见快评】美媒曝东航坠毁是人为 东航回应</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739318.md#1">备战台海 广东高层会议秘密录音曝光</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739256.md#1">李克强讲话“上墙”党媒争相报 释何信号</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/14/n13736831.md#1">11种营养和饮食 改善成人过动症</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/dahstt3965/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/dahstt3965/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/8/2/n8159100.htm">为避新税 加拿大大温地产业日夜加班</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/8/2/n8159100.htm">为避新税 加拿大大温地产业日夜加班</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/dahstt3965/djy/blob/master/gb/16/8/2/n8159100.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/dahstt3965/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dahstt3965/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/dahstt3965/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/dahstt3965/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/dahstt3965/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dahstt3965/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/dahstt3965/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dahstt3965/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/dahstt3965/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dahstt3965/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/dahstt3965/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dahstt3965/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/dahstt3965/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dahstt3965/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/dahstt3965/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dahstt3965/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/dahstt3965/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dahstt3965/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/dahstt3965/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dahstt3965/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/dahstt3965/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dahstt3965/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/dahstt3965/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dahstt3965/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/dahstt3965/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dahstt3965/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/dahstt3965/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dahstt3965/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/dahstt3965/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dahstt3965/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/dahstt3965/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dahstt3965/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/dahstt3965/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dahstt3965/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/dahstt3965/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dahstt3965/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/dahstt3965/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dahstt3965/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/dahstt3965/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dahstt3965/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/dahstt3965/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dahstt3965/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/dahstt3965/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dahstt3965/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/dahstt3965/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dahstt3965/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/dahstt3965/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dahstt3965/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xsumwp3307/djy/blob/master/gb/16/8/2/n8159100.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
